--- a/src/components/apps/styles.module.css
+++ b/src/components/apps/styles.module.css
@@ -24,20 +24,20 @@
   gap: 18px;
   flex-direction: column;
   justify-content: center;
+}
 
-  > h1 {
-    font-size: 2.6rem;
-    line-height: 3rem;
-    color: var(--title);
-    font-weight: 800;
-  }
+.column > h1 {
+  font-size: 2.6rem;
+  line-height: 3rem;
+  color: var(--title);
+  font-weight: 800;
+}
 
-  > p {
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    font-weight: 500;
-    color: var(--title);
-  }
+.column > p {
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 500;
+  color: var(--title);
 }
 
 .row {
