--- a/src/components/aps/styles.module.css
+++ b/src/components/aps/styles.module.css
@@ -23,10 +23,10 @@
   gap: 24px;
   flex-direction: column;
   justify-content: center;
+}
 
-  > p {
-    font-size: 1.4rem;
-    line-height: 2.4rem;
-    color: var(--title);
-  }
+.column > p {
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  color: var(--title);
 }
