--- a/src/components/institucional/styles.module.css
+++ b/src/components/institucional/styles.module.css
@@ -17,23 +17,23 @@
   gap: 12px;
   flex-direction: column;
   justify-content: center;
+}
 
-  > h1 {
-    font-size: 2.6rem;
-    line-height: 2.6rem;
-    font-weight: 700;
-    color: var(--title);
-    text-transform: uppercase;
+.column > h1 {
+  font-size: 2.6rem;
+  line-height: 2.6rem;
+  font-weight: 700;
+  color: var(--title);
+  text-transform: uppercase;
 
-    border-left: 3px solid var(--red);
-    padding: 4px 0 4px 8px;
-  }
-  > p {
-    font-size: 1.4rem;
-    line-height: 2rem;
-    color: var(--title);
-    text-align: justify;
-  }
+  border-left: 3px solid var(--red);
+  padding: 4px 0 4px 8px;
+}
+.column > p {
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: var(--title);
+  text-align: justify;
 }
 
 .image {
