--- a/src/components/join/styles.module.css
+++ b/src/components/join/styles.module.css
@@ -11,18 +11,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
 
-  > h1 {
-    font-size: 2.6rem;
-    line-height: 2.6rem;
-    font-weight: 700;
-    color: var(--title);
-  }
+.container > h1 {
+  font-size: 2.6rem;
+  line-height: 2.6rem;
+  font-weight: 700;
+  color: var(--title);
+}
 
-  > p {
-    font-size: 1.6rem;
-    line-height: 2rem;
-    font-weight: 600;
-    color: var(--title);
-  }
+.container > p {
+  font-size: 1.6rem;
+  line-height: 2rem;
+  font-weight: 600;
+  color: var(--title);
 }
