--- a/src/components/menu/style.module.css
+++ b/src/components/menu/style.module.css
@@ -14,30 +14,30 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+}
 
-  > span {
-    margin-bottom: 12px;
+.column > span {
+  margin-bottom: 12px;
 
-    font-size: 1.2rem;
-    line-height: 1.2rem;
-    font-weight: 600;
-    color: var(--title);
-  }
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+  font-weight: 600;
+  color: var(--title);
+}
 
-  > a {
-    width: fit-content;
-    height: fit-content;
+.column > a {
+  width: fit-content;
+  height: fit-content;
 
-    font-size: 1.2rem;
-    line-height: 1.2rem;
-    font-weight: 500;
-    color: var(--title);
-    text-decoration: none;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
+  font-weight: 500;
+  color: var(--title);
+  text-decoration: none;
 
-    transition: all 350ms ease-in-out;
+  transition: all 350ms ease-in-out;
 
-    &:hover {
-      opacity: 0.8;
-    }
+  &:hover {
+    opacity: 0.8;
   }
 }
