--- a/src/components/news/styles.module.css
+++ b/src/components/news/styles.module.css
@@ -9,21 +9,21 @@
   align-items: center;
 
   background-color: #eeeeee;
+}
 
-  > h1 {
-    font-size: 2.6rem;
-    line-height: 2.6rem;
-    color: var(--title);
-    font-weight: 700;
-  }
+.container > h1 {
+  font-size: 2.6rem;
+  line-height: 2.6rem;
+  color: var(--title);
+  font-weight: 700;
+}
 
-  > p {
-    width: 625px;
-    text-align: center;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    color: var(--title);
-  }
+.container > p {
+  width: 625px;
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  color: var(--title);
 }
 
 .carousel {
@@ -47,39 +47,39 @@
   cursor: pointer;
   transition: all 350ms ease-in-out;
 
-  > h1 {
-    font-size: 1.6rem;
-    line-height: 2rem;
-    color: var(--title);
-  }
-
-  > p {
-    font-size: 1.4rem;
-    line-height: 2rem;
-    color: var(--title);
-  }
-
   &:hover {
     transform: translateY(-5%);
   }
+}
+
+.card > h1 {
+  font-size: 1.6rem;
+  line-height: 2rem;
+  color: var(--title);
+}
+
+.card > p {
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: var(--title);
 }
 
 .row {
   display: flex;
   gap: 10px;
   align-items: center;
+}
 
-  > svg {
-    font-size: 3.2rem;
-    line-height: 3.2rem;
-    color: var(--red);
-  }
+.row > svg {
+  font-size: 3.2rem;
+  line-height: 3.2rem;
+  color: var(--red);
+}
 
-  > span {
-    font-size: 1.4rem;
-    line-height: 1.4rem;
-    color: var(--title);
-  }
+.row > span {
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+  color: var(--title);
 }
 
 .swiper {
@@ -87,10 +87,8 @@
   padding-inline: 16px;
 }
 
-.swiper {
-  > div:nth-of-type(1) {
-    padding: 24px 0;
-  }
+.swiper > div:nth-of-type(1) {
+  padding: 24px 0;
 }
 
 .swiper_slide {
