--- a/src/components/service/styles.module.css
+++ b/src/components/service/styles.module.css
@@ -17,19 +17,19 @@
 
   border-left: 5px solid var(--red);
   padding: 6px 0 6px 16px;
+}
 
-  > h1 {
-    font-size: 2.6rem;
-    line-height: 3rem;
-    color: var(--title);
-    font-weight: 700;
-  }
+.column > h1 {
+  font-size: 2.6rem;
+  line-height: 3rem;
+  color: var(--title);
+  font-weight: 700;
+}
 
-  > p {
-    font-size: 1.6rem;
-    line-height: 1.6rem;
-    color: var(--title);
-  }
+.column > p {
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  color: var(--title);
 }
 
 .row {
@@ -37,23 +37,23 @@
   height: fit-content;
 
   display: flex;
+}
 
-  > button {
-    width: fit-content;
-    height: 56px;
+.row > button {
+  width: fit-content;
+  height: 56px;
 
-    padding-inline: 44px;
+  padding-inline: 44px;
 
-    border: none;
-    border-radius: 0 3px 3px 0;
-    background-color: var(--title);
+  border: none;
+  border-radius: 0 3px 3px 0;
+  background-color: var(--title);
 
-    font-size: 1.6rem;
-    line-height: 1.6rem;
-    color: white;
-    font-weight: 600;
-    cursor: pointer;
-  }
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .input {
@@ -67,39 +67,39 @@
   border: 2px solid var(--even);
   border-right: none;
   border-radius: 10px 0 0 10px;
+}
 
-  > svg {
-    font-size: 2.2rem;
-    line-height: 2.2rem;
-    color: var(--red);
-    flex-shrink: 0;
+.input > svg {
+  font-size: 2.2rem;
+  line-height: 2.2rem;
+  color: var(--red);
+  flex-shrink: 0;
+}
+
+.input > input {
+  width: 100%;
+  height: 70%;
+
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  color: var(--title);
+
+  border: none;
+  background: none;
+
+  margin-left: 14px;
+
+  outline: none;
+
+  &::placeholder {
+    color: rgba(0, 0, 0, 0.35);
   }
+}
 
-  > input {
-    width: 100%;
-    height: 70%;
+.input > select {
+  font-weight: 600;
+  padding: 6px 8px;
 
-    font-size: 1.8rem;
-    line-height: 1.8rem;
-    color: var(--title);
-
-    border: none;
-    background: none;
-
-    margin-left: 14px;
-
-    outline: none;
-
-    &::placeholder {
-      color: rgba(0, 0, 0, 0.35);
-    }
-  }
-
-  > select {
-    font-weight: 600;
-    padding: 6px 8px;
-
-    border-radius: 6px;
-    border: 2px solid rgba(0, 0, 0, 0.35);
-  }
+  border-radius: 6px;
+  border: 2px solid rgba(0, 0, 0, 0.35);
 }
