--- a/src/components/join/styles.module.css
+++ b/src/components/join/styles.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 300px;
 
-  background-image: url("../../../public/join.jpg");
+  background-image: url("../../../public/assets/join.jpg");
   background-position: center;
   background-size: cover;
 
